err/mtweets.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/mtweets'...
Compiling './lib/python3.5/site-packages/mtweets/api.py'...
***   File "./lib/python3.5/site-packages/mtweets/api.py", line 90
    except HTTPError, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/mtweets/streaming.py'...
***   File "./lib/python3.5/site-packages/mtweets/streaming.py", line 163
    except HTTPError, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/mtweets/utils.py'...
***   File "./lib/python3.5/site-packages/mtweets/utils.py", line 164
    except HTTPError, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/mtweets-0.4.egg-info'...
Listing './lib/python3.5/site-packages/oauth'...
Compiling './lib/python3.5/site-packages/oauth/client.py'...
***   File "./lib/python3.5/site-packages/oauth/client.py", line 120
    except IOError, error:
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/oauther-0.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/simplejson'...
Listing './lib/python3.5/site-packages/simplejson/tests'...
Listing './lib/python3.5/site-packages/simplejson-3.13.2.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
